manifest/envs/prod/resources/gateway.yaml
# このファイルは `task render-env-values` が terraform output から生成する
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
  annotations:
    argocd.argoproj.io/sync-wave: "-15"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "163.43.86.200"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.k8s.ictsc.net"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.ictsc.net"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: external-tls
      allowedRoutes:
        namespaces:
          from: All
